session add and edit functionality added

--- a/school-fe/src/assets/i18n/en.json
+++ b/school-fe/src/assets/i18n/en.json
@@ -21,6 +21,12 @@
         "JOB": "Job"
       }
     },
+    "ACADEMIC": {
+      "TEXT": "Academic",
+      "LIST": {
+        "SESSIONS": "Sessions"
+      }
+    },
     "APPS": {
       "TEXT": "Apps",
       "LIST": {
