class crud functionality added

--- a/school-fe/src/assets/i18n/en.json
+++ b/school-fe/src/assets/i18n/en.json
@@ -24,8 +24,8 @@
     "ACADEMIC": {
       "TEXT": "Academic",
       "LIST": {
-        "SESSIONS": "Sessions"
-      }
+        "SESSIONS": "Sessions",
+        "CLASSES": "Classes"      }
     },
     "APPS": {
       "TEXT": "Apps",
