added academic functionalities

--- a/school-fe/src/assets/i18n/en.json
+++ b/school-fe/src/assets/i18n/en.json
@@ -25,7 +25,11 @@
       "TEXT": "Academic",
       "LIST": {
         "SESSIONS": "Sessions",
-        "CLASSES": "Classes"      }
+        "CLASSES": "Classes",
+        "SUBJECTS": "Subjects",
+        "CLASSSUBJECTS": "Class Subjects",
+        "GRADEBOUNDARY": "Grade Boundary"
+      }
     },
     "APPS": {
       "TEXT": "Apps",
